--- a/requirements.txt
+++ b/requirements.txt
@@ -9,17 +9,24 @@ h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.2
 idna==3.8
+iniconfig==2.0.0
 jiter==0.5.0
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 numpy==2.1.1
 openai==1.44.0
+packaging==24.1
 pandas==2.2.2
+pluggy==1.5.0
 protobuf==5.28.0
 pydantic==2.9.0
 pydantic_core==2.23.2
+pytest==8.3.2
+pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
+PyYAML==6.0.2
 referencing==0.35.1
 regex==2024.7.24
 requests==2.32.3
@@ -27,6 +34,7 @@ rpds-py==0.20.0
 six==1.16.0
 sniffio==1.3.1
 tiktoken==0.7.0
+tomli==2.0.1
 tqdm==4.66.5
 typing_extensions==4.12.2
 tzdata==2024.1
